cluster/policies/hospital-hms-allow-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hospital-hms-allow-all
  namespace: hospital-hms-dev
spec:
  podSelector: {}
  ingress:
  - {}
  egress:
  - {}

  policyTypes:
  - Ingress
  - Egress
