cluster/policies/hospital-hms-opa.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedReposv2
metadata:
  name: hospital-hms-allowed-images
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "hospital-hms-dev"
  parameters:
    allowedImages:
      - "somnathbm/*"
